--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,5 +3,5 @@ spring.datasource.username = ${JDBC_DATABASE_USERNAME}
 spring.datasource.password = ${JDBC_DATABASE_PASSWORD}
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = none
-spring.datasource.platform=h2
+spring.datasource.platform=postgresql
 spring.jpa.properties.hibernate.show_sql=true
