environment variables added

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/springbootdb
+spring.datasource.url = jdbc:postgresql://${JDBC_DATABASE_URL}/springbootdb
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
