--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>9.4-1200-jdbc41</version>
 		</dependency>
 	</dependencies>
 
